admin login problem continue

--- a/client/src/pages/checkout/checkout.css
+++ b/client/src/pages/checkout/checkout.css
@@ -85,7 +85,7 @@
     margin-bottom: 20px;
 }
 
-.payment .payment-btn {
+.payment-btn {
     display: block;
     width: 100%;
     text-align: center;
