--- a/admin/src/App.css
+++ b/admin/src/App.css
@@ -18,4 +18,7 @@
     width: 100%;
     height: 100vh;
     padding: 10px;
+    display: flex;
+    width: 100vw;
+    justify-content: space-between;
 }
