--- a/admin/src/component/sidebar/sidebar.css
+++ b/admin/src/component/sidebar/sidebar.css
@@ -4,6 +4,10 @@
     width: 20%;
     height: 100%;
 }
+.sidebar div .active {
+    /* border: 2px solid rgba(5, 0, 0, 0.945); */
+    background-color: rgb(230, 228, 228);
+}
 
 .sidebar-container {
     padding: 25px 10px 15px 20px;
@@ -21,32 +25,22 @@
     padding: 0px;
     margin: 4rem 0px 40px;
     width: 100%;
-
-}
-
-.sidebar-container .sidebar .sidebar_iteam {
-    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: end;
+
 }
 
 .sidebar div {
-    border: 1px solid rgba(109, 108, 108, 0.458);
     margin-bottom: 8px;
     width: 80%;
     height: 2.8rem;
-    border-radius: 25px 0px 0px 25px;
     transition: all 0.1s;
 }
 
-.sidebar div li {
-    list-style: none;
-    text-align: right;
-
-}
-
-.sidebar div li .link {
+.sidebar div .link {
+    border-radius: 25px 0px 0px 25px;
+    border: 1px solid rgba(109, 108, 108, 0.458);
     display: flex;
     align-items: center;
     justify-content: start;
@@ -60,10 +54,11 @@
     letter-spacing: 1px;
 }
 
-.sidebar div li .link span{
+.sidebar div .link span {
     margin-left: 10px;
 }
-.sidebar div:hover {
+
+.sidebar div .link:hover {
     border: 1px solid rgba(109, 108, 108, 0.974);
 
 }
@@ -72,7 +67,7 @@
     text-align: right;
 }
 
-.sidebar-container .login-btn .link {
+.sidebar-container .login-btn {
     font-family: var(--text-font);
     color: var(--font-color);
     text-transform: capitalize;
@@ -81,28 +76,31 @@
     text-align: right;
     text-transform: uppercase;
     border: 1px solid rgba(109, 108, 108, 0.458);
-    padding: 12px 15%;
+    padding: 10px 12%;
     border-radius: 20px;
     transition: all 0.5s
 }
 
-.sidebar-container .login-btn .link:hover {
+.sidebar-container .login-btn:hover {
+    cursor: pointer;
     background-color: grey;
     color: rgb(250, 249, 249);
 }
 
+
+
 @media screen and (max-width:1300px) {
 
     .sidebar-container .title-name {
-        font-size:33px ;
+        font-size: 33px;
     }
-    .sidebar div li .link
-    {
+
+    .sidebar div li .link {
         padding: 14px 9px;
         font-size: 13px;
     }
-    .sidebar-container .login-btn .link 
-    {
+
+    .sidebar-container .login-btn {
         font-size: 14px;
     }
 }
