--- a/admin/src/component/sidebar/sidebar.css
+++ b/admin/src/component/sidebar/sidebar.css
@@ -1,5 +1,5 @@
 .sidebar-main-container {
-    margin: 0px;
+    margin-right: 15px;
     background-color: white;
     width: 20%;
     height: 100%;
