--- a/admin/src/page/add product/addIteam.css
+++ b/admin/src/page/add product/addIteam.css
@@ -1,7 +1,5 @@
 .additeam-main-container {
     height: 100%;
-    display: flex;
-    justify-content: space-between;
     width: 79%;
 }
 
@@ -10,4 +8,99 @@
     height: 100%;
     padding: 10px 15px;
     background-color: white;
+}
+
+.additeam-inner-container form
+{
+    padding: 1% 2%;
+}
+.additeam-inner-container form div
+{
+    margin-bottom: 10px;
+}
+
+.image-cont img {
+    width: 8%;
+    border: 2px dotted rgba(0, 0, 0, 0.285);
+}
+
+.image-cont img:hover {
+    cursor: pointer;
+}
+
+.input-field {
+    padding: 13px;
+    border: 1px solid gray;
+    border-radius: 5px;
+    width: 50%;
+    font-size: 17px;
+}
+
+.input-field:hover {
+    border: 1px solid blue;
+}
+
+.additeam-inner-container .label {
+    margin: 10px 0px;
+    text-transform: capitalize;
+    font-family: var(--text-font);
+    color: var(--font-color);
+    font-size: 17px;
+}
+
+.gender-price-cont {
+    display: flex;
+    width: 30%;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.product-gender, .product-price {
+    padding: 10px 5px;
+    width: 8rem;
+    border-radius: 5px;
+    font-size: 17px;
+    font-family: var(--text-font);
+    color: var(--font-color);
+}
+.size-inner-cont
+{
+    display: flex;
+    width: 50%;
+    justify-content: space-between;
+}
+.size-inner-cont div
+{
+    border: 1px solid rgba(125, 123, 123, 0.466);
+    padding: 10px 8px;
+    background-color: rgba(128, 128, 128, 0.326);
+    font-family: var(--text-font);
+}
+.size-inner-cont div:hover
+{
+    border: 1px solid orange;
+    cursor: pointer;
+}
+
+.additeam-inner-container .submit-btn
+{
+    margin-top: 10px;
+    padding: 13px 35px;
+    border: none;
+    font-family: var(--font-color);
+    font-size: 17px;
+    letter-spacing: 1px;
+    background-color: black;
+    color: white;
+    border-radius: 5px;
+    transition: all 0.3s;
+}
+.additeam-inner-container .submit-btn:hover
+{
+    background-color: rgb(44, 44, 44);
+    cursor: pointer;
+}
+.selected-cont
+{
+    background-color: rgb(154, 17, 17);
 }
