--- a/admin/src/page/add product/addIteam.css
+++ b/admin/src/page/add product/addIteam.css
@@ -15,7 +15,7 @@
 }
 
 .additeam-inner-container form div {
-    margin-bottom: 10px;
+    margin-bottom: 8px;
 }
 
 .image-cont img {
@@ -85,6 +85,21 @@
 .size-inner-cont .not-in:hover {
     border: 1px solid orange;
     cursor: pointer;
+}
+
+.best-new-arrival
+{
+    width: 30%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.best-new-arrival div
+{
+    width: 35%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .additeam-inner-container .submit-btn {
