--- a/client/src/pages/product/product.css
+++ b/client/src/pages/product/product.css
@@ -75,6 +75,29 @@
     font-family: var(--text-font);
     color: var(--text-font);
 }
+.size-inner-cont {
+    display: flex;
+    flex-wrap: wrap;
+    width: 50%;
+    justify-content: space-between;
+}
+
+.size-inner-cont .not-in {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid rgba(125, 123, 123, 0.466);
+    width: 3.5rem;
+    padding: 10px 8px;
+    background-color: rgba(128, 128, 128, 0.326);
+    font-family: var(--text-font);
+}
+
+.size-inner-cont .not-in:hover {
+    border: 1px solid orange;
+    cursor: pointer;
+}
+
 
 
 .product-detail-container .product-detail .add-to-cart .add-to-cart-btn {
