--- a/client/src/pages/product/product.css
+++ b/client/src/pages/product/product.css
@@ -58,28 +58,15 @@
     font-size: 18px;
     text-transform: capitalize;
 }
-
-.product-detail-container .product-detail .add-to-cart {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+.product-detail-container .size-cont{
+    margin: 10px 0px;
     padding: 10px 0px;
-}
-
-.product-size .size-selector {
-    border: 1px solid rgba(84, 84, 84, 0.377);
-    border-radius: 5px;
-    width: 8rem;
-    padding: 5px 10px;
-    font-size: 19px;
-    font-family: var(--text-font);
-    color: var(--text-font);
 }
 .size-inner-cont {
     display: flex;
     flex-wrap: wrap;
-    width: 50%;
-    justify-content: space-between;
+    /* width: ; */
+    justify-content: start;
 }
 
 .size-inner-cont .not-in {
@@ -91,20 +78,35 @@
     padding: 10px 8px;
     background-color: rgba(128, 128, 128, 0.326);
     font-family: var(--text-font);
+    margin:5px 10px 0px 0px;
 }
 
-.size-inner-cont .not-in:hover {
+
+.size-inner-cont .not-in,.size-inner-cont .selected-cont:hover {
     border: 1px solid orange;
     cursor: pointer;
 }
 
+.size-inner-cont .selected-cont {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid rgba(125, 123, 123, 0.466);
+    width: 3.5rem;
+    padding: 10px 8px;
+    background-color: rgb(74, 74, 74);
+    color: white;
+    margin-right: 10px;
+
+}
 
 
-.product-detail-container .product-detail .add-to-cart .add-to-cart-btn {
+
+.product-detail-container .product-detail .add-to-cart-btn {
     width: 50%;
 }
 
-.product-detail-container .product-detail .add-to-cart .add-to-cart-btn button {
+.product-detail-container .product-detail .add-to-cart-btn button {
     text-align: center;
     background-color: #6E7051;
     color: white;
@@ -117,7 +119,7 @@
     transition: all 0.5s;
 }
 
-.product-detail-container .product-detail .add-to-cart .add-to-cart-btn button:hover {
+.product-detail-container .product-detail .add-to-cart-btn button:hover {
     background-color: #2d2e2e;
     cursor: pointer;
 }
@@ -167,39 +169,18 @@
     .product-detail-container .product-detail {
         width: 100%;
     }
-
-    .product-detail-container .product-detail .add-to-cart {
-        width: 60%;
-    }
-
-    .product-size .size-selector {
-        font-size: 17px;
-    }
 }
 
 @media screen and (max-width:800px) {
 
-        .product-size .size-selector {
-        font-size: 16px;
-    }
     .product-detail-container .product-detail .description {
 
         font-size: 17px;
 
     }
 }
-
-@media screen and (max-width:730px) {
-
-    .product-detail-container .product-detail .add-to-cart {
-        width: 75%;
-    }
-}
 @media screen and (max-width:600px) {
-    
-    .product-detail-container .product-detail .add-to-cart {
-        width: 95%;
-    }
+
 
     .product-detail-container .product-detail .description {
 
@@ -210,26 +191,15 @@
 
 @media screen and (max-width:500px) {
     
-    .product-detail-container .product-detail .add-to-cart {
-        width: 100%;
-    }
 
-    .product-detail-container .product-detail .add-to-cart .add-to-cart-btn {
+    .product-detail-container .product-detail .add-to-cart-btn {
         width: 55%;
     }
 }
 
 @media screen and (max-width:440px) {
-    .product-size
-    {
-        margin-bottom: 20px;
-    }
-    .product-detail-container .product-detail .add-to-cart {
-        flex-direction: column;
-        align-items: start;
-    }
 
-    .product-detail-container .product-detail .add-to-cart .add-to-cart-btn {
+    .product-detail-container .product-detail .add-to-cart-btn {
         width: 100%;
     }
 }
