--- a/client/src/component/best_seller/seller.css
+++ b/client/src/component/best_seller/seller.css
@@ -22,7 +22,7 @@
 .seller .iteam_list 
 {
     width: 100%;
-    height: 65rem;
+    height: 100%;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     column-gap : 15px;
