--- a/client/src/component/new_arrive/new_arrival.css
+++ b/client/src/component/new_arrive/new_arrival.css
@@ -21,7 +21,7 @@
 
 .arrival .iteam_list {
     width: 100%;
-    height: 90rem;
+    height: 100%;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     column-gap: 15px;
